--- a/css/Index.css
+++ b/css/Index.css
@@ -9,7 +9,7 @@
 
 .container {
     display: grid;
-    grid-template-columns: 15% 85%;
+    grid-template-columns: 10% 1fr;
 
     grid-template-areas: "header header"
                          "nav movies"
