--- a/css/Index.css
+++ b/css/Index.css
@@ -11,7 +11,7 @@
     display: grid;
     grid-template-columns:  1fr 11fr;
 
-    grid-column-gap: 5px;
+    grid-column-gap: 1rem;
 
     grid-template-areas: "header header"
                          "nav movies"
@@ -32,4 +32,8 @@
 
 .footer {
     grid-area: footer;
+}
+
+.container {
+    background-color: rgb(255, 255, 255);
 }
