--- a/css/header.css
+++ b/css/header.css
@@ -44,6 +44,10 @@
     align-items: center;
 
     height: var(--Header-height);
+
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 /*------Logo------*/
@@ -93,7 +97,7 @@
 
 .header {
     background-color: var(--Header-background-color);
-    border-bottom: 1px solid black;
+    
 }
 
 
