--- a/css/header.css
+++ b/css/header.css
@@ -31,7 +31,16 @@
 
     --Login-img-height: 4rem;
     --Login-img-width: 4rem;
+
+    --User-name-margin: 1rem;
+    --User-name-font-size: 1.2rem;
+    --User-name-font-family: 'Indie Flower', arial;
   
+    --Z-back: -10;
+    --Z-normal: 1;
+    --Z-tooltip: 10;
+    --Z-fixed: 100;
+    --Z-modal: 1000;
 
 }
 
@@ -42,12 +51,9 @@
     grid-template-columns: 20% 50% 30%;
     justify-content: center;
     align-items: center;
-
     height: var(--Header-height);
-
-    position: sticky;
     top: 0;
-    z-index: 1;
+    position: relative;
 }
 
 /*------Logo------*/
@@ -159,9 +165,6 @@
 
 
 .user-name {
-    --User-name-margin: 1rem;
-    --User-name-font-size: 1.2rem;
-    --User-name-font-family: 'Indie Flower', arial;
     margin-right: var(--User-name-margin);
     font-size: var(--User-name-font-size);
     font-family: var(--User-name-font-family);
@@ -178,4 +181,49 @@
     width: 100%;
     height: 100%;
     object-fit: cover;  
+}
+
+.burger-menu{
+    display: none
+}
+
+@media screen and ( max-width: 768px ){
+
+    :root {
+        --Form-width: 80%;
+    }
+
+.header {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+
+}
+
+
+.burger-menu{
+    display: block;
+    margin-left: 2.5rem;  
+}
+
+.burger-menu a {
+    text-decoration: none;
+    color: black;
+}
+    
+.burger-menu a i {
+    font-size: 2rem;
+    transition: 0.5s;
+}
+
+.burger-menu a i:hover {
+    color: rgb(247, 114, 114);
+}
+
+
+.logo-container{
+    justify-self: right;
+    padding-right: 2rem;
+}
+
+
 }
